# C964

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  compose.yaml  decision_tree_example.tex  package.json
.github/: main.yml
.github/workflows/: angular-ci.yml  cargo-ci.yml  main.yml
docs/: Matthew_Alltop_C964_Capstone.docx  Matthew_Alltop_C964_Capstone.docx - Shortcut.lnk  ~WRL1894.tmp
html/: demographic.html
src/: algo.rs  api.rs  enums.rs  frames.rs  http.rs  main.rs  plots.rs  predict.rs  requests.rs  traits.rs
src/algo/: mod.rs
src/api/: mod.rs
src/experiments/: comorbidity.rs  mod.rs  prevalence.rs
src/frames/: demographics.rs  hyperaktiv.rs  medication.rs  mental_health.rs  mod.rs  patient_info.rs  subtypes.rs
src/functions/: mod.rs
src/http/: mod.rs  requests.rs  responses.rs
src/plots/: adhd_types.rs  demographic.rs  demographics.rs  mental_health.rs  mod.rs
src/plots/.ipynb_checkpoints/: demographic-checkpoint.rs
src/traits/: mod.rs  patient_info_ext.rs
web/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
web/src/: index.html  styles.scss  test-response.json
web/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
web/src/app/experiment/: experiment.component.ts
web/src/app/explore/: explore.component.html  explore.component.ts
web/src/app/explore/explore-nav-bar/: explore-nav-bar.component.html  explore-nav-bar.component.spec.ts  explore-nav-bar.component.ts
web/src/app/explore/subtypes/: subtypes.component.html  subtypes.component.spec.ts  subtypes.component.ts
web/src/app/home/: home.component.html  home.component.ts
web/src/app/predict/: predict.component.html  predict.component.scss  predict.component.ts
web/src/app/predict/predict-nav-bar/: predict-nav-bar.component.html  predict-nav-bar.component.spec.ts  predict-nav-bar.component.ts
web/src/app/shared/explore-nav-bar/: explore-nav-bar.component.html  explore-nav-bar.component.ts
web/src/app/shared/grid/: grid.component.html  grid.component.ts
web/src/app/shared/plot/: plot.component.ts
web/src/assets/: decision_tree_example.tex
web/src/environments/: environment.development.ts  environment.ts
web/src/models/: requests.ts  responses.ts
web/src/services/: demographic.service.ts  explore-data.service.spec.ts  explore-data.service.ts  grid.service.ts  mental-health.service.ts  plot.service.ts  predict.service.ts  subtype.service.ts
web/src/shared/: as-words.pipe.spec.ts  as-words.pipe.ts
web/src/shared/grid/: grid.component.ts  grid.service.ts
web/src/shared/nils-operators/: indicate.ts  prepare.ts
web/src/shared/plot/: plot.service.ts
